--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</style>
 	</head>
 	<body>
-		<a href="index2.html" target="_self">进  入</a>
+		<a href="index2.html" target="_blank">进  入</a>
 		</div>
 	</body>
 </html>
